# fast-license-checker

./: .cursorrules  .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: scan_performance.rs
docs/: Consolidated Architecture Guide.md  phase-5-final-audit-report.md  phase-6-code-audit-report.md
docs/benchmarks/: index.html
docs/inputs/: fast-license-checker-requirements.txt
docs/rfcs/: 0000-build-plan.md  0001-license-checker.md
src/: design_sketch.rs  error.rs  lib.rs
src/checker/: detector.rs  mod.rs  prelude.rs  validator.rs
src/config/: loader.rs  mod.rs  types.rs
src/fixer/: inserter.rs  mod.rs  writer.rs
src/scanner/: filter.rs  mod.rs  walker.rs
src/types/: file_types.rs  header_types.rs  mod.rs  results.rs
tests/common/: mod.rs
tests/integration/: edge_cases.rs  fix_mode.rs  scan_mode.rs
